--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Tessellate by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Tessellate by HTML5 UP</title>
+		<title>Tessellate</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +12,7 @@
 			<section id="header" class="dark">
 				<header>
 					<h1>Welcome to Tessellate</h1>
-					<p>A free responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+					<p>A free responsive site template by <a href="http://alaaqutfa.netlify.app">Alaa Qutfa</a></p>
 				</header>
 				<footer>
 					<a href="#first" class="button scrolly">Proceed to second phase</a>
@@ -386,7 +381,7 @@
 				</ul>
 				<div class="copyright">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://alaaqutfa.netlify.app>Alaa Qutfa</a></li>
 					</ul>
 				</div>
 			</section>
